--- a/nginx.conf
+++ b/nginx.conf
@@ -11,14 +11,14 @@ http {
     # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name ваш-домен.com www.ваш-домен.com;
+        server_name drum4fun.club www.drum4fun.club;
         return 301 https://$server_name$request_uri;
     }
 
     # HTTPS server
     server {
         listen 443 ssl http2;
-        server_name ваш-домен.com www.ваш-домен.com;
+        server_name drum4fun.club www.drum4fun.club;
 
         # SSL configuration
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
