--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@types/nodemailer": "^6.4.17",
+    "@sendgrid/mail": "^8.1.5",
     "@types/pg": "^8.15.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -49,7 +49,6 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "nodemailer": "^7.0.3",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
