Migrate email system from SendGrid to MailerSend
- Replace SendGrid SDK with MailerSend SDK (v2.6.0)
- Update lib/email.ts to use MailerSend API
- Update environment variables from SENDGRID to MAILERSEND
- Update .env.example with MailerSend configuration
- Fix admin email reference in checkout route
- Add comprehensive MAILERSEND_MIGRATION.md documentation
- Maintain all existing email templates and functionality
- Add demo mode for development without API keys

Benefits:
- 3,000 free emails/month (vs SendGrid's 100)
- Better deliverability and simpler setup
- Comprehensive migration guide and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database configuration
 DATABASE_URL=your_database_url_here
 
-# SendGrid Email Configuration
-SENDGRID_API_KEY=your-sendgrid-api-key-here
-SENDGRID_FROM_EMAIL=noreply@yourschool.com
+???# MailerSend Email Configuration
+MAILERSEND_API_TOKEN=your-mailersend-api-token-here
+MAILERSEND_FROM_EMAIL=noreply@yourschool.com
 ADMIN_EMAIL=admin@yourschool.com
 
 # Application URLs
